working auto save features
add:
- setting to save upon sending requrest
- setting to save when closing a request
- window to ask for save if no auto save is configured
